force-app/main/default/objects/Item__c/fields/Brand_Web_Site__c.field-meta.xml
<CustomField>
    <fullName>Brand_Web_Site__c</fullName>
    <label>Brand Web Site</label>
    <type>Url</type>
</CustomField>