force-app/main/default/objects/Item__c/fields/End_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>End_of_Insurance__c</fullName>
    <label>End of Insurance</label>
    <type>Date</type>
</CustomField>